--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/launch-screen.png",
+      "image": "",
       "resizeMode": "contain",      
       "backgroundColor": "#535ce8",
       "hideAfterMs": 120000
