--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "~50.0.14",
     "expo-asset": "^9.0.2",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^8.8.1",
     "react": "18.2.0",
     "react-native": "^0.73.6",
     "react-native-animatable": "^1.4.0",
